ClassPrevious/class/Content/DataVis/EXAMPLES/IntroC++/CHAP0/P5.C
/*#################################################################
# Copyright (c) 1991 AT&T Bell Laboratories, All Rights Reserved   
# Published in ``A C++ Primer''  by Stanley Lippman, Addison-Wesley
#################################################################*/

int main ( {   // error: missing ')'
    readIn():  // error: illegal character ':'
    sort();
    compact();
    print(); 
    return 0   // error: missing ';'
}
